// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Core > applyAutoFixes > basic 1`] = `"const a = 1;"`;

exports[`Core > applyAutoFixes > fix overlapped problems 1`] = `
"() => {return (
  () => {return (
    () => {return (
      () => {return (
        () => {return (
          () => {return (
            () => {return (
              () => {return (
                () => {return (
                  () => {return (
                    () => (
                      () => (
                        0
                      )
                    )
                  )}
                )}
              )}
            )}
          )}
        )}
      )}
    )}
  )}
)};"
`;

exports[`Core > applySuggestions 1`] = `"if (!(key in object)) {}"`;

exports[`Core > constructor > pass options to eslint 1`] = `
[
  {
    "errorCount": 1,
    "filePath": "<fixture>/src/index.js",
    "messages": [
      {
        "ruleId": "prefer-const",
        "severity": 2,
      },
    ],
    "warningCount": 0,
  },
  {
    "errorCount": 1,
    "filePath": "<fixture>/src/index.mjs",
    "messages": [
      {
        "ruleId": "ban-exponentiation-operator",
        "severity": 2,
      },
    ],
    "warningCount": 0,
  },
]
`;

exports[`Core > disablePerFile 1`] = `
"/* eslint-disable prefer-const */
let a = 1;"
`;

exports[`Core > disablePerLine 1`] = `
"// eslint-disable-next-line prefer-const
let a = 1;"
`;

exports[`Core > fixes problems with legacy config and 3rd-party plugins 1`] = `
"// eslint-disable-next-line test/ban-nullish-coalescing-operator
2 ?? 2;"
`;

exports[`Core > flat config 1`] = `
[
  {
    "errorCount": 1,
    "filePath": "<fixture>/src/.index.js",
    "messages": [
      {
        "ruleId": "prefer-const",
        "severity": 2,
      },
    ],
    "warningCount": 0,
  },
  {
    "errorCount": 1,
    "filePath": "<fixture>/src/index.js",
    "messages": [
      {
        "ruleId": "prefer-const",
        "severity": 2,
      },
    ],
    "warningCount": 0,
  },
  {
    "errorCount": 1,
    "filePath": "<fixture>/src/index.jsx",
    "messages": [
      {
        "ruleId": "prefer-const",
        "severity": 2,
      },
    ],
    "warningCount": 0,
  },
  {
    "errorCount": 1,
    "filePath": "<fixture>/src/index.mjs",
    "messages": [
      {
        "ruleId": "prefer-const",
        "severity": 2,
      },
    ],
    "warningCount": 0,
  },
]
`;

exports[`Core > flat config 2`] = `"const a = 1;"`;

exports[`Core > flat config 3`] = `"const a = 1;"`;

exports[`Core > flat config 4`] = `"const a = 1;"`;

exports[`Core > flat config 5`] = `"const a = 1;"`;

exports[`Core > formatResultDetails 1`] = `
"
<fixture>/src/ban-exponentiation-operator.js
  1:1  error  Ban exponentiation operator  ban-exponentiation-operator

<fixture>/src/import-order.js
  1:1  error  Definition for rule 'import/order' was not found  import/order

✖ 2 problems (2 errors, 0 warnings)
"
`;

exports[`Core > formatResultSummary 1`] = `
"- 8 files (0 file passed, 8 files failed) checked.
- 19 problems (18 errors, 1 warning) found.
╔══════════════════════════════════════╤═══════╤═════════╤════════════╤═════════════════╗
║ Rule                                 │ Error │ Warning │ is fixable │ has suggestions ║
╟──────────────────────────────────────┼───────┼─────────┼────────────┼─────────────────╢
║ arrow-body-style                     │ 12    │ 0       │ 12         │ 0               ║
╟──────────────────────────────────────┼───────┼─────────┼────────────┼─────────────────╢
║ ban-exponentiation-operator          │ 1     │ 0       │ 0          │ 0               ║
╟──────────────────────────────────────┼───────┼─────────┼────────────┼─────────────────╢
║ test/ban-nullish-coalescing-operator │ 1     │ 0       │ 0          │ 0               ║
╟──────────────────────────────────────┼───────┼─────────┼────────────┼─────────────────╢
║ import/order                         │ 1     │ 0       │ 0          │ 0               ║
╟──────────────────────────────────────┼───────┼─────────┼────────────┼─────────────────╢
║ no-unsafe-negation                   │ 1     │ 0       │ 0          │ 1               ║
╟──────────────────────────────────────┼───────┼─────────┼────────────┼─────────────────╢
║ no-unused-vars                       │ 1     │ 0       │ 0          │ 1               ║
╟──────────────────────────────────────┼───────┼─────────┼────────────┼─────────────────╢
║ prefer-const                         │ 1     │ 1       │ 2          │ 0               ║
╚══════════════════════════════════════╧═══════╧═════════╧════════════╧═════════════════╝
"
`;

exports[`Core > lint > returns lint results 1`] = `
[
  {
    "errorCount": 12,
    "filePath": "<fixture>/src/arrow-body-style.js",
    "messages": [
      {
        "ruleId": "arrow-body-style",
        "severity": 2,
      },
      {
        "ruleId": "arrow-body-style",
        "severity": 2,
      },
      {
        "ruleId": "arrow-body-style",
        "severity": 2,
      },
      {
        "ruleId": "arrow-body-style",
        "severity": 2,
      },
      {
        "ruleId": "arrow-body-style",
        "severity": 2,
      },
      {
        "ruleId": "arrow-body-style",
        "severity": 2,
      },
      {
        "ruleId": "arrow-body-style",
        "severity": 2,
      },
      {
        "ruleId": "arrow-body-style",
        "severity": 2,
      },
      {
        "ruleId": "arrow-body-style",
        "severity": 2,
      },
      {
        "ruleId": "arrow-body-style",
        "severity": 2,
      },
      {
        "ruleId": "arrow-body-style",
        "severity": 2,
      },
      {
        "ruleId": "arrow-body-style",
        "severity": 2,
      },
    ],
    "warningCount": 0,
  },
  {
    "errorCount": 1,
    "filePath": "<fixture>/src/ban-exponentiation-operator.js",
    "messages": [
      {
        "ruleId": "ban-exponentiation-operator",
        "severity": 2,
      },
    ],
    "warningCount": 0,
  },
  {
    "errorCount": 1,
    "filePath": "<fixture>/src/ban-nullish-coalescing-operator.js",
    "messages": [
      {
        "ruleId": "test/ban-nullish-coalescing-operator",
        "severity": 2,
      },
    ],
    "warningCount": 0,
  },
  {
    "errorCount": 1,
    "filePath": "<fixture>/src/import-order.js",
    "messages": [
      {
        "ruleId": "import/order",
        "severity": 2,
      },
    ],
    "warningCount": 0,
  },
  {
    "errorCount": 1,
    "filePath": "<fixture>/src/no-unsafe-negation.js",
    "messages": [
      {
        "ruleId": "no-unsafe-negation",
        "severity": 2,
      },
    ],
    "warningCount": 0,
  },
  {
    "errorCount": 1,
    "filePath": "<fixture>/src/no-unused-vars.js",
    "messages": [
      {
        "ruleId": "no-unused-vars",
        "severity": 2,
      },
    ],
    "warningCount": 0,
  },
  {
    "errorCount": 1,
    "filePath": "<fixture>/src/prefer-const.js",
    "messages": [
      {
        "ruleId": "prefer-const",
        "severity": 2,
      },
    ],
    "warningCount": 0,
  },
  {
    "errorCount": 0,
    "filePath": "<fixture>/src/warn.js",
    "messages": [
      {
        "ruleId": "prefer-const",
        "severity": 1,
      },
    ],
    "warningCount": 1,
  },
]
`;

exports[`Core > makeFixableAndFix 1`] = `"const _a = 1;"`;

exports[`Core > supports unstable_config_lookup_from_file flag 1`] = `
[
  {
    "errorCount": 0,
    "filePath": "<fixture>/src/dir/eslint.config.js",
    "messages": [],
    "warningCount": 0,
  },
  {
    "errorCount": 1,
    "filePath": "<fixture>/src/dir/test.js",
    "messages": [
      {
        "ruleId": "no-console",
        "severity": 2,
      },
    ],
    "warningCount": 0,
  },
  {
    "errorCount": 1,
    "filePath": "<fixture>/src/test.js",
    "messages": [
      {
        "ruleId": "prefer-const",
        "severity": 2,
      },
    ],
    "warningCount": 0,
  },
]
`;
